--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
    <title>Document</title>
 </head>
 <body>
-   
-   <div class="exp">
-      <label class="logo">Xyz</label>
+    
+   <div class="border_of_navbar">
+      <div class="exp"> <div class="menu_container" onclick="myFunction(this)">
+         <div class="bar1"></div>
+         <div class="bar2"></div>
+         <div class="bar3"></div>
+       </div>
+
          <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#">Explore</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Components</a></li>
             <li><a href="#">Portfolio</a></li>
@@ -20,6 +25,24 @@
          </ul>
       </nav>
    </div>
+</div>
+
+   <div class="cartoon_view_navbar">
+      <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Explore</a></li>
+            <li><a href="#">Order Now</a></li>
+            <li><a href="#">Virtual Tour</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Contact Us</a></li>
+      </ul>
+   </div>
+
+
+
+    <script src="index.js"></script>
    
 </body>
 </html>
