--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    </div>
 </div>
 
-   <div class="cartoon_view_navbar">
+   <!-- <div class="cartoon_view_navbar">
       <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Explore</a></li>
@@ -38,7 +38,8 @@
             <li><a href="#">Settings</a></li>
             <li><a href="#">Contact Us</a></li>
       </ul>
-   </div>
+   </div> -->
+
 
 
 
