--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
     </div>
 
   </div>
+  <!--               break line                   -->
+  <div class="break"></div>
+
+  <!-- service section    ----------------------------->
+
+  <div class="service_section">
+     <div class="service_elements">
+
+   </div>
+
+  </div>
+
 
 
 
