Update Service Section

--- a/Assetss/servicesection.html
+++ b/Assetss/servicesection.html
@@ -5,70 +5,13 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
    <title>Document</title>
+   <link rel="stylesheet" href="servicesection.css">
 </head>
 
 <body>
 
-   <nav class="navbar">
-      <div class="border_of_navbar">
-
-
-
-         <div class="menu_container" id="menu_container_id" onclick="myFunction(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-         </div>
-         <div class="exp">
-            <ul>
-               <li><a href="#">Explore</a></li>
-               <li><a href="#">Service</a></li>
-               <li><a href="#">Components</a></li>
-               <li><a href="#">Portfolio</a></li>
-               <li><a href="#">Contact</a></li>
-            </ul>
-         </div>
-
-
-      </div>
-   </nav>
-
-
-   <!-- explore section -->
-   <div class="explore_section">
-      <h1>Explore</h1>
-      <div class="elplore_contents_all">
-         <div class="explore_items">
-              <img src="Images/parrot.jpg" alt="">
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-               velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-               adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-            <button>Read More</button>
-         </div>
-   
-         <div class="explore_items">
-              <img src="Images/parrot.jpg" alt="">
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-               velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-               adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-            <button>Read More</button>
-         </div>
-   
-         <div class="explore_items">
-           <img src="Images/parrot.jpg" alt="">
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-               velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-               adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-            <button>Read More</button>
-         </div>
-      </div>
-    </div>
-
-    <!-- end of explore section -->
-
-    <section class="section-services">
+   <section class="section-services">
       <div class="container">
 
          <!-- Exclusive Services Secction that  contains the title ans
@@ -206,15 +149,6 @@
          </div>
       </div>
    </section>
-
-  <div class="break"></div>
-
-
-
-
-
-   <script src="index.js"></script>
-
 </body>
 
 </html>
