--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Document</title>
+   <title>Indra</title>
 </head>
 
 <body>
@@ -163,41 +163,6 @@
                </div>
                <!-- / End Single Service -->
 
-               <!-- Single Service -->
-               <!-- <div class="single-service">
-                  <div class="content">
-                     <span class="icon">
-                        <i class="fas fa-chart-pie"></i>
-                     </span>
-                     <h3 class="title">Business Consulting</h3>
-                     <p class="description">Mauris volutpat urna tristique finibus
-                        iaculis. Morbi facilisis, justo eu vulputate elementum, est
-                        augue tincidunt ante, sed efficitur leo ligula vel velit.
-                     </p>
-                     <a href="#" class="learn-more">Learn More</a>
-                  </div>
-                  <span class="circle-before"></span>
-               </div> -->
-               <!-- / End Single Service -->
-               
-               <!-- Single Service -->
-               <!-- <div class="single-service">
-                  <div class="content">
-                     <span class="icon">
-                        <i class="fas fa-laptop-code"></i>
-                     </span>
-                     <h3 class="title">Website Design</h3>
-                     <p class="description">Mauris volutpat urna tristique finibus
-                         iaculis. Morbi facilisis, justo eu vulputate elementum, est
-                          augue tincidunt ante, sed efficitur leo ligula vel velit.
-                     </p>
-                     <a href="#" class="learn-more">Learn More</a>
-                  </div>
-                  <span class="circle-before"></span>
-               </div> -->
-               <!-- / End Single Service -->
-
-
             </div>
             <!-- Single Service blocks that gives description  of services -->
 
@@ -209,6 +174,58 @@
 
   <div class="break"></div>
 
+  
+   <h1 id="portfolio_header">Portfolio.</h1>
+   
+   <nav class="navbar">
+     <!-- <a href="#" class="active" style="--i:1;">Home</a> -->
+     <a href="#" style="--i:2;">About</a>
+     <!-- <a href="#" style="--i:3;">Portfolio</a> -->
+     <a href="#" style="--i:4;">Skills</a>
+     <a href="#" style="--i:5;">Contact</a>
+   </nav>
+
+<section>
+  <article>
+    <h3 style="--i:6;">Hello, I'm</h3>
+    <h2>Indra</h2>
+    <h3 style="--i:8;">I'm a <span><a href="https://fr.wikipedia.org/wiki/D%C3%A9veloppement_web_frontal" target="_blank" title="Wikipedia">Frontend developer</a></span></h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae felis scelerisque, gravida sapien
+      non, cursus augue. Aenean id pretium turpis. Suspendisse eros nunc, sollicitudin nec.</p>
+  </article>
+  <div class="img"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png" alt=""></div>
+</section>
+
+<div class="break"></div>
+
+   <div class="footer-content">
+      <h3>Footer Example</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae felis scelerisque, gravida sapien
+         non, cursus augue. Aenean id pretium turpis. Suspendisse eros nunc, sollicitudin nec.</p>
+
+      <ul class="socials">
+         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+         <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+         <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+         <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+      </ul>
+   </div>
+
+   <div class="break"></div>
+
+
+   <div class="footer-bottom">
+      <p>Copyright &copy <span id="year"></span> <a href="#">@indraray</a> </p>
+      <div class="footer-menu">
+         <ul class="f-menu">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Blog</a></li>
+         </ul>
+      </div>
+   </div>
 
 
 
