--- a/Assetss/portfolio/portfolio.html
+++ b/Assetss/portfolio/portfolio.html
@@ -13,9 +13,9 @@
      <h1>Portfolio.</h1>
      
      <nav class="navbar">
-       <a href="#" class="active" style="--i:1;">Home</a>
+       <!-- <a href="#" class="active" style="--i:1;">Home</a> -->
        <a href="#" style="--i:2;">About</a>
-       <a href="#" style="--i:3;">Portfolio</a>
+       <!-- <a href="#" style="--i:3;">Portfolio</a> -->
        <a href="#" style="--i:4;">Skills</a>
        <a href="#" style="--i:5;">Contact</a>
      </nav>
