Update Let's Connect

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
    <title>Indra</title>
+   <link rel="icon" type="image/x-icon" href="Images/1684516051.ico">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -150,7 +152,7 @@
                <div class="single-service">
                   <div class="content">
                      <span class="icon">
-                        <i class="fab fa-500px"></i>
+                        <!-- <i class="fab fa-500px"></i> -->
                      </span>
                      <h3 class="title">Brand Strategy</h3>
                      <p class="description">Mauris volutpat urna tristique finibus
@@ -198,10 +200,12 @@
 
 <div class="break"></div>
 
-   <div class="footer-content">
-      <h3>Footer Example</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae felis scelerisque, gravida sapien
-         non, cursus augue. Aenean id pretium turpis. Suspendisse eros nunc, sollicitudin nec.</p>
+   <div class="footer-content" >
+      <h3>Let's Connect</h3>
+      <p> Let's connect and explore the possibilities! Whether it's through sharing 
+         ideas, discussing goals, or embarking on a specific project, 
+         I'm ready to contribute and support your vision. Let's grow, learn,
+          and create something truly extraordinary!</p>
 
       <ul class="socials">
          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -220,9 +224,6 @@
       <div class="footer-menu">
          <ul class="f-menu">
             <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Blog</a></li>
          </ul>
       </div>
    </div>
