--- a/Assetss/footer/footer.html
+++ b/Assetss/footer/footer.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Simple Footer Template with auto current Year</title>
+   <title>Footer</title>
    <link rel="stylesheet" href="footer.css">
 </head>
 
@@ -11,7 +11,7 @@
 
    <footer>
       <div class="footer-content">
-         <h3>Footer Example</h3>
+         <h3>Footer</h3>
          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae felis scelerisque, gravida sapien
             non, cursus augue. Aenean id pretium turpis. Suspendisse eros nunc, sollicitudin nec.</p>
 
@@ -25,7 +25,7 @@
       </div>
 
       <div class="footer-bottom">
-         <p>Copyright &copy <span id="year"></span> <a href="#">@coding_dev_</a> </p>
+         <p>Copyright &copy <span id="year"></span> <a href="#">@indraray</a> </p>
          <div class="footer-menu">
             <ul class="f-menu">
                <li><a href="">Home</a></li>
