@nd update of lets connect and

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     <!-- end of explore section -->
 
+
     <section class="section-services">
       <div class="container">
 
@@ -177,14 +178,14 @@
   <div class="break"></div>
 
   
-   <h1 id="portfolio_header">Portfolio.</h1>
+   <h1 id="portfolio_header">Portfolio</h1>
    
    <nav class="navbar">
-     <!-- <a href="#" class="active" style="--i:1;">Home</a> -->
-     <a href="#" style="--i:2;">About</a>
-     <!-- <a href="#" style="--i:3;">Portfolio</a> -->
-     <a href="#" style="--i:4;">Skills</a>
-     <a href="#" style="--i:5;">Contact</a>
+     <a href="#" style="--i:1;">Education</a>
+     <a href="#" style="--i:2;">Projects</a>
+     <a href="#" style="--i:3;">Skills</a>
+     <a href="#" style="--i:4;">Responsibilities</a>
+     <!-- <a href="#" style="--i:5;">Contact</a> -->
    </nav>
 
 <section>
@@ -195,7 +196,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae felis scelerisque, gravida sapien
       non, cursus augue. Aenean id pretium turpis. Suspendisse eros nunc, sollicitudin nec.</p>
   </article>
-  <div class="img"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png" alt=""></div>
+  <div class="img"><i class="fa fa-linkedin-square"></i></div>
 </section>
 
 <div class="break"></div>
@@ -216,7 +217,7 @@
       </ul>
    </div>
 
-   <div class="break"></div>
+   <div class="break-light"></div>
 
 
    <div class="footer-bottom">
