--- a/index.html
+++ b/index.html
@@ -1,205 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-   <title>Indra</title>
-   <link rel="icon" type="image/x-icon" href="Images/1684516051.ico">
+   <title>Portfolio</title>
+   <link rel="stylesheet" href="portfolio.css">
+   <script src="portfolio.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
 <body>
+   <header>
+      <h1>Portfolio.</h1>
+      <nav class="navbar">
+        <a href="#" class="active" onclick="openCard()">Education</a>
+        <a href="#" onclick="openCard()">Project</a>
+        <a href="#" onclick="openCard()">Skills</a>
+        <a href="#" onclick="openCard()">Responsibilities</a>
+      </nav>
+    </header>
 
-   <nav class="navbar">
-      <div class="border_of_navbar">
+  <div class="card" id="card">
+    <h2>Heading to be given...</h2>
+    <p>This is a pop-up card for Details!</p>
+    <button onclick="closeCard()">Close</button>
+  </div>
 
-
-
-         <div class="menu_container" id="menu_container_id" onclick="myFunction(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-         </div>
-         <div class="exp">
-            <ul>
-               <li><a href="#">Explore</a></li>
-               <li><a href="#">Service</a></li>
-               <li><a href="#">Components</a></li>
-               <li><a href="#">Portfolio</a></li>
-               <li><a href="#">Contact</a></li>
-            </ul>
-         </div>
-
-
-      </div>
-   </nav>
-
-
-   <!-- explore section -->
-   <div class="explore_section">
-      <h1>Explore</h1>
-      <div class="elplore_contents_all">
-         <div class="explore_items">
-              <img src="Images/parrot.jpg" alt="">
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-               velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-               adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-            <button>Read More</button>
-         </div>
-   
-         <div class="explore_items">
-              <img src="Images/parrot.jpg" alt="">
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-               velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-               adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-            <button>Read More</button>
-         </div>
-   
-         <div class="explore_items">
-           <img src="Images/parrot.jpg" alt="">
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-               velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-               adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-            <button>Read More</button>
-         </div>
-      </div>
+    <div class="portfolio_div">
+      <section>
+        <article>
+          <h3>Hello, I'm</h3>
+          <h2>Indrajit Ray</h2>
+          <h3>I'm a <span><a href="https://fr.wikipedia.org/wiki/D%C3%A9veloppement_web_frontal"
+                target="_blank" title="Wikipedia">Developer...</a></span></h3>
+          <p> Currently pursuing <b>B. Tech</b>  degree at <b>National Institute of Technology (NIT)</b>  in Silchar.<br>
+             As a dedicated student,
+             and passion for technology drives in the field of <b>Computer Science and 
+              Engineering.</b> 
+            With scholar ID of <b> 2112020</b>, I am committed to leveraging my skills and expertise 
+            to make a positive impact in the world of web development. Through my academic journey, 
+            I have acquired a understanding of programming languages and web technologies. 
+            As a web developer, I possess a comprehensive skill set that enables me to design and 
+            develop dynamic and user-friendly websites. 
+             With a keen eye for detail and a 
+            focus on delivering seamless user experiences.</p>
+        </article>
+      </section>
     </div>
 
-    <!-- end of explore section -->
-
-
-    <section class="section-services">
-      <div class="container">
-
-         <!-- Exclusive Services Secction that  contains the title ans
-          description  -->
-         <div class="row justify-content-center text-center">
-            <div class="col-md-10 col-lg-8">
-               <div class="header-section">
-                  <h2 class="title">Exclusive Services</h2>
-                  <p class="description">Lorem ipsum dolor sit amet, consectetur
-                     adipiscing elit. Curabitur malesuada fermentum purus, eu volutpat
-                     nisi laoreet id. Phasellus fringilla accumsan metus, at tempor est
-                     hendrerit et.
-                     <br>Indra: @2112020
-                  </p>
-               </div>
-            </div>
-         </div>
-         <!-- End of the Exclusive Services Secction -->
-
-         <!-- Row Div that contains the all the services we provide 
-      ans all description about it -->
-         <div class="row">
-
-            <!-- Single Service blocks that gives description  of services -->
-            <div class="all-service-section">
-
-               <!-- Single Service -->
-               <div class="single-service">
-                  <div class="content">
-                     <span class="icon">
-                        <i class="fab fa-battle-net"></i>
-                     </span>
-                     <h3 class="title">Global coverage</h3>
-                     <p class="description">Mauris volutpat urna tristique
-                        finibus iaculis. Morbi facilisis, justo eu vulputate
-                        elementum, est augue tincidunt ante, sed efficitur leo ligula vel velit.
-                     </p>
-                     <a href="#" class="learn-more">Learn More</a>
-                  </div>
-                  <span class="circle-before"></span>
-               </div>
-               <!-- / End Single Service -->
-
-               <!-- Single Service -->
-               <div class="single-service">
-                  <div class="content">
-                     <span class="icon">
-                        <i class="fab fa-asymmetrik"></i>
-                     </span>
-                     <h3 class="title">It Management</h3>
-                     <p class="description">Mauris volutpat urna tristique finibus
-                        iaculis. Morbi facilisis, justo eu vulputate elementum, est
-                        augue tincidunt ante, sed efficitur leo ligula vel velit.
-                     </p>
-                     <a href="#" class="learn-more">Learn More</a>
-                  </div>
-                  <span class="circle-before"></span>
-               </div>
-               <!-- / End Single Service -->
-
-               <!-- Single Service -->
-               <div class="single-service">
-                  <div class="content">
-                     <span class="icon">
-                        <i class="fab fa-artstation"></i>
-                     </span>
-                     <h3 class="title">Software Development</h3>
-                     <p class="description">Mauris volutpat urna tristique finibus
-                        iaculis. Morbi facilisis, justo eu vulputate elementum, est
-                        augue tincidunt ante, sed efficitur leo ligula vel velit.
-                     </p>
-                     <a href="#" class="learn-more">Learn More</a>
-                  </div>
-                  <span class="circle-before"></span>
-               </div>
-               <!-- / End Single Service -->
-
-               <!-- Single Service -->
-               <div class="single-service">
-                  <div class="content">
-                     <span class="icon">
-                        <!-- <i class="fab fa-500px"></i> -->
-                     </span>
-                     <h3 class="title">Brand Strategy</h3>
-                     <p class="description">Mauris volutpat urna tristique finibus
-                        iaculis. Morbi facilisis, justo eu vulputate elementum,
-                        est augue tincidunt ante, sed efficitur leo ligula vel velit.
-                     </p>
-                     <a href="#" class="learn-more">Learn More</a>
-                  </div>
-                  <span class="circle-before"></span>
-               </div>
-               <!-- / End Single Service -->
-
-            </div>
-            <!-- Single Service blocks that gives description  of services -->
-
-
-
-         </div>
-      </div>
-   </section>
-
-  <div class="break"></div>
-
-  
-   <h1 id="portfolio_header">Portfolio</h1>
-   
-   <nav class="navbar">
-     <a href="#" style="--i:1;">Education</a>
-     <a href="#" style="--i:2;">Projects</a>
-     <a href="#" style="--i:3;">Skills</a>
-     <a href="#" style="--i:4;">Responsibilities</a>
-     <!-- <a href="#" style="--i:5;">Contact</a> -->
-   </nav>
-
-<section>
-  <article>
-    <h3 style="--i:6;">Hello, I'm</h3>
-    <h2>Indra</h2>
-    <h3 style="--i:8;">I'm a <span><a href="https://fr.wikipedia.org/wiki/D%C3%A9veloppement_web_frontal" target="_blank" title="Wikipedia">Frontend developer</a></span></h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae felis scelerisque, gravida sapien
-      non, cursus augue. Aenean id pretium turpis. Suspendisse eros nunc, sollicitudin nec.</p>
-  </article>
-  <div class="img"><i class="fa fa-linkedin-square"></i></div>
-</section>
-
-<div class="break"></div>
+    <div class="break"></div>
 
    <div class="footer-content" >
       <h3>Let's Connect</h3>
@@ -229,11 +78,5 @@
       </div>
    </div>
 
-
-
-
-   <script src="index.js"></script>
-
 </body>
-
 </html>
