--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <title>Portfolio</title>
    <link rel="stylesheet" href="portfolio.css">
    <script src="portfolio.js"></script>
+   <link rel="shortcut icon" href="Images/1684516051.ico" type="image/x-icon">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
