--- a/index.html
+++ b/index.html
@@ -64,38 +64,158 @@
                 <a href="">Read More</a>
       </div>
    </div>
+   
+   <div class="project">
+      <div class="project_image">
+         <img src="Images/parrot.jpg" alt="">
+      </div>
+      <div class="project_content">
+         <h2>Protfolio</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Architecto, hic? Magnam eum error saepe doloribus corrupti
+                    repellat quisquam alias doloremque!
+                </p>
+                <a href="">Read More</a>
+      </div>
+   </div>
+
+   <div class="project">
+      <div class="project_image">
+         <img src="Images/parrot.jpg" alt="">
+      </div>
+      <div class="project_content">
+         <h2>Protfolio</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Architecto, hic? Magnam eum error saepe doloribus corrupti
+                    repellat quisquam alias doloremque!
+                </p>
+                <a href="">Read More</a>
+      </div>
+   </div>
 </div>
+
 
 
    <div class="break"></div>
 
    <h3>Programming?</h3>
    <div class="skills_section">
-     <div class="card">
-      <h4>C++</h4>
-     </div>
+      <div class="card">
+         <h4>C++</h4>
+        </div>
+        <div class="card">
+         <h4>C++</h4>
+        </div>
+        <div class="card">
+         <h4>C++</h4>
+        </div>
+        <div class="card">
+         <h4>C++</h4>
+        </div>
+        <div class="card">
+         <h4>C++</h4>
+        </div>
+        <div class="card">
+         <h4>C++</h4>
+        </div>
    </div>
 
    <div class="break"></div>
 
-   <div class="footer-content">
-      <h3>Education</h3>
-      <ul>
-         <li>NIT Silchar</li>
-         <li>Jawahar Navodaya vidyalaya</li>
-         <li>Jawahar Navodaya vidyalaya</li>
-      </ul>
-   </div>
 
+   <div id="timeline-container">
+      <div class="inner-container">
+        <h2 class="heading">Schedule</h2>
+        <ul class="timeline">
+          <li class="timeline-item" data-date="22 Jan 2020">Mentor / Participant Registration Begins</li>
+          <li class="timeline-item" data-date="3 Feb 2020">Mentor Registration Closes</li>
+          <li class="timeline-item" data-date="14 Feb 2020">Participant Registration Closes</li>
+          <li class="timeline-item" data-date="17 Feb 2020">Projects Announced</li>
+          <li class="timeline-item" data-date="17-23 Feb 2020">Acceptance Mails Sent</li>
+          <li class="timeline-item" data-date="24-29 Feb 2020">Community Bonding</li>
+          <li class="timeline-item" data-date="1 Mar 2020">Event Begins</li>
+          <li class="timeline-item" data-date="31 May 2020">Event Ends</li>
+          <li class="timeline-item" data-date="15 Jun 2020">Results Out</li>
+        </ul>
+      </div>
+    </div>
+   
+   
    <div class="break"></div>
-
+   
    <div class="footer-content">
       <h3>Responsibilities</h3>
-      <ul>
-         <li>Gyansagar Design Member</li>
-         <li>Public Relations Member, Computer Science Society</li>
-         <li>N.E.R.D.S/ Robotics Club</li>
-      </ul>
+   </div>
+   
+
+   <div style="height: 30vh"></div>
+   <div class="timeline">
+     <div class="timeline__section">
+       <div class="timeline__left">
+         <div class="timeline__date">
+           <div>PR Member CSS</div>
+           <div>March 1st, 2022</div>
+         </div>
+       </div>
+       <div class="timeline__tracker">
+         <div class="tracker"></div>
+       </div>
+       <div class="timeline__middle">
+         <div class="timeline__bullet"></div>
+       </div>
+       <div class="timeline__right">
+         <div>
+           <div class="timeline__content">
+            Mangdhsibjnage Social Media Posts. dsghjldjkjbnxz bkjlshjcxvhjsjkbnx ckljmn Social Media Posts.  Manage Social Media Posts.  Manage Social Media Posts.
+         </div>
+         </div>
+       </div>
+     </div>
+     <div class="timeline__section">
+       <div class="timeline__left">
+         <div class="timeline__date">
+           <div>N.E.R.D.S/ Robotics Clu</div>
+           <div>March 1st, 2022</div>
+         </div>
+       </div>
+       <div class="timeline__tracker">
+         <div class="tracker"></div>
+       </div>
+       <div class="timeline__middle">
+         <div class="timeline__bullet"></div>
+       </div>
+       <div class="timeline__right">
+         <div>
+           <div class="timeline__content">
+             Yes, Yes, without the oopvbnsafghjkdshs! 
+             Yes, Yes, without dghjkdmthe oops! 
+             Yes,without the oops! 
+               </div>
+         </div>
+       </div>
+     </div>
+     <div class="timeline__section">
+       <div class="timeline__left">
+         <div class="timeline__date">
+           <div>Gyansagar/Design</div>
+           <div>March 1st, 2022</div>
+         </div>
+       </div>
+       <div class="timeline__tracker">
+         <div class="tracker"></div>
+       </div>
+       <div class="timeline__middle">
+         <div class="timeline__bullet"></div>
+       </div>
+       <div class="timeline__right">
+         <div>
+           <div class="timeline__content">
+             Yes, Yesdsjv dsjljxkmjjkdxojkl dpxikjnd dxpojinfghd zfdxghjanbsn hgjdk jhbdk, without the oops! sdytfghidskjzxcbnjkiudhx  </div>
+         </div>
+       </div>
+     </div>
    </div>
 
    <div class="break"></div>
