--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
 <body>
 
+   <div class="mobile-view">
+      <h4>Please view in your pc for better experience.
+          Mobile Version will be <br> comming soon... </h4>
+   </div>
+
+   
    <header>
       <h1>Portfolio.</h1>
       <nav class="navbar">
@@ -127,17 +133,18 @@
 
    <div id="timeline-container">
       <div class="inner-container">
-        <h2 class="heading">Schedule</h2>
+        <h3 class="heading">Education</h3>
         <ul class="timeline">
-          <li class="timeline-item" data-date="22 Jan 2020">Mentor / Participant Registration Begins</li>
-          <li class="timeline-item" data-date="3 Feb 2020">Mentor Registration Closes</li>
-          <li class="timeline-item" data-date="14 Feb 2020">Participant Registration Closes</li>
-          <li class="timeline-item" data-date="17 Feb 2020">Projects Announced</li>
-          <li class="timeline-item" data-date="17-23 Feb 2020">Acceptance Mails Sent</li>
-          <li class="timeline-item" data-date="24-29 Feb 2020">Community Bonding</li>
-          <li class="timeline-item" data-date="1 Mar 2020">Event Begins</li>
-          <li class="timeline-item" data-date="31 May 2020">Event Ends</li>
-          <li class="timeline-item" data-date="15 Jun 2020">Results Out</li>
+           <li class="timeline-item" data-date=""></li>
+          <li class="timeline-item" data-date="Dec 2020">National Institude of Technology, Silchar <br>Branch: CSE
+         <br>CGPA: 7.71(till 4th  Sem)</li>
+          <li class="timeline-item" data-date=""></li>
+          <li class="timeline-item" data-date="2020">Passed 12th / Interediate <br> Jawahar Navodaya Vidyalaya
+         , Bongaigaon <br>Per-cent: 88%</li>
+          <li class="timeline-item" data-date=""></li>
+          <li class="timeline-item" data-date="2018">Passed 10th <br> Jawahar Navodaya Vidyalaya
+            , Bongaigaon <br>Per-cent: 92%</li>
+          <li class="timeline-item" data-date=""></li>
         </ul>
       </div>
     </div>
@@ -265,6 +272,8 @@
          </ul>
       </div>
    </div>
+
+
 
 </body>
 
