--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
    <script src="portfolio.js"></script>
    <link rel="shortcut icon" href="Images/1684516051.ico" type="image/x-icon">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
@@ -102,27 +104,40 @@
 
    <div class="break"></div>
 
-   <h3>Programming?</h3>
    <div class="skills_section">
-      <div class="card">
-         <h4>C++</h4>
+      <h2>Skills/Tech Stack</h2>
+     <div class="all-skills">   
+        <div class="card">
+        <ion-icon name="code"></ion-icon>
+        <h4>C++</h4>
+       </div>
+       <div class="card">
+          <ion-icon name="code-slash-outline"></ion-icon>
+          <h4>HTML</h4>
         </div>
         <div class="card">
-         <h4>C++</h4>
+           <ion-icon name="logo-css3"></ion-icon>
+           <h4>CSS</h4>
         </div>
         <div class="card">
-         <h4>C++</h4>
+           <ion-icon name="logo-javascript"></ion-icon>
+        <h4>Java Script</h4>
+       </div>
+       <div class="card">
+          <ion-icon name="logo-react"></ion-icon>
+          <h4>React</h4>
         </div>
         <div class="card">
-         <h4>C++</h4>
+           <ion-icon name="bug"></ion-icon>
+           <h4>Arduino</h4>
         </div>
         <div class="card">
-         <h4>C++</h4>
+           <ion-icon name="eye"></ion-icon>
+           <h4>Aframe</h4>
         </div>
-        <div class="card">
-         <h4>C++</h4>
-        </div>
-   </div>
+     </div>
+
+  </div>
 
    <div class="break"></div>
 
