--- a/Assetss/explore/exploresection.html
+++ b/Assetss/explore/exploresection.html
@@ -4,38 +4,46 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Skills</title>
    <link rel="stylesheet" href="exploresection.css">
-   <title>Document</title>
+   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-   
-  <div class="explore_section">
-   <h1>Explore</h1>
-   <div class="elplore_contents_all">
-      <div class="explore_items">
-           <img src="Images/parrot.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-            velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-            adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-         <button>Read More</button>
+   <div class="skills_section">
+       <h2>Skills/Tech Stack</h2>
+      <div class="all-skills">   
+         <div class="card">
+         <ion-icon name="code"></ion-icon>
+         <h4>C++</h4>
+        </div>
+        <div class="card">
+           <ion-icon name="code-slash-outline"></ion-icon>
+           <h4>HTML</h4>
+         </div>
+         <div class="card">
+            <ion-icon name="logo-css3"></ion-icon>
+            <h4>CSS</h4>
+         </div>
+         <div class="card">
+            <ion-icon name="logo-javascript"></ion-icon>
+         <h4>Java Script</h4>
+        </div>
+        <div class="card">
+           <ion-icon name="logo-react"></ion-icon>
+           <h4>React</h4>
+         </div>
+         <div class="card">
+            <ion-icon name="bug"></ion-icon>
+            <h4>Arduino</h4>
+         </div>
+         <div class="card">
+            <ion-icon name="eye"></ion-icon>
+            <h4>Aframe</h4>
+         </div>
       </div>
 
-      <div class="explore_items">
-           <img src="Images/parrot.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-            velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-            adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-         <button>Read More</button>
-      </div>
-
-      <div class="explore_items">
-        <img src="Images/parrot.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deleniti delectus magni,
-            velit veniam ducimus dicta debitis, possimus, omnis rerum rem aspernatur cupiditate 
-            adipisci repellendus nemo eaque fugiat. Consectetur, voluptates.</p>
-         <button>Read More</button>
-      </div>
    </div>
- </div>
+
 </body>
 </html>
