--- a/index.html
+++ b/index.html
@@ -162,79 +162,29 @@
    
    
    <div class="break"></div>
-   
-   <div class="footer-content">
-      <h3>Responsibilities</h3>
-   </div>
-   
+  
+    <h2 style="text-align: center; color: white;">Position of Responsibilities</h2>
+    <section class="timeline1">
+      <ul>
+        <li>
+          <div>
+            <time>October 2022-Present</time>CSS, NIT Silchar <br> *  Manage social media posts, <br>* Collaborate with other clubs <br>* Public outreach and publicity of events.
+          </div>
+        </li>
+        <li>
+          <div>
+            <time>October 2022-Present</time> NERDS, NIT Silchar
+         <br>* Robotics club           </div>
+        </li>
+        <li>
+          <div>
+            <time>Feb 2022 - August 2022</time> Gyansagar, NIT Silchar <br>Design post for social media
+         <br>   </div>
+        </li>
+        
+      </ul>
+    </section>
 
-   <div style="height: 30vh"></div>
-   <div class="timeline">
-     <div class="timeline__section">
-       <div class="timeline__left">
-         <div class="timeline__date">
-           <div>PR Member CSS</div>
-           <div>March 1st, 2022</div>
-         </div>
-       </div>
-       <div class="timeline__tracker">
-         <div class="tracker"></div>
-       </div>
-       <div class="timeline__middle">
-         <div class="timeline__bullet"></div>
-       </div>
-       <div class="timeline__right">
-         <div>
-           <div class="timeline__content">
-            Mangdhsibjnage Social Media Posts. dsghjldjkjbnxz bkjlshjcxvhjsjkbnx ckljmn Social Media Posts.  Manage Social Media Posts.  Manage Social Media Posts.
-         </div>
-         </div>
-       </div>
-     </div>
-     <div class="timeline__section">
-       <div class="timeline__left">
-         <div class="timeline__date">
-           <div>N.E.R.D.S/ Robotics Clu</div>
-           <div>March 1st, 2022</div>
-         </div>
-       </div>
-       <div class="timeline__tracker">
-         <div class="tracker"></div>
-       </div>
-       <div class="timeline__middle">
-         <div class="timeline__bullet"></div>
-       </div>
-       <div class="timeline__right">
-         <div>
-           <div class="timeline__content">
-             Yes, Yes, without the oopvbnsafghjkdshs! 
-             Yes, Yes, without dghjkdmthe oops! 
-             Yes,without the oops! 
-               </div>
-         </div>
-       </div>
-     </div>
-     <div class="timeline__section">
-       <div class="timeline__left">
-         <div class="timeline__date">
-           <div>Gyansagar/Design</div>
-           <div>March 1st, 2022</div>
-         </div>
-       </div>
-       <div class="timeline__tracker">
-         <div class="tracker"></div>
-       </div>
-       <div class="timeline__middle">
-         <div class="timeline__bullet"></div>
-       </div>
-       <div class="timeline__right">
-         <div>
-           <div class="timeline__content">
-             Yes, Yesdsjv dsjljxkmjjkdxojkl dpxikjnd dxpojinfghd zfdxghjanbsn hgjdk jhbdk, without the oops! sdytfghidskjzxcbnjkiudhx  </div>
-         </div>
-       </div>
-     </div>
-   </div>
 
    <div class="break"></div>
 
